<resources>
    <string name="app_name">SendKr</string>
    <string name="save">save</string>
    <string name="hint_name">enter name</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_share">Share</string>
    <string name="create_party">CREATE GROUP</string>
    <string name="join_party">JOIN GROUP</string>
    <string name="about_cap">About</string>
    <string name="developer">Developer Profile</string>
    <string name="app_description">An app for sending and receiving files without internet via Wi-Fi network.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="accept_policy">By using the app you agree to the SendKr &lt;a href="https://vkp.page.link/skpp">privacy policy&lt;/a></string>
    <string name="cancel">Cancel</string>
    <string name="i_agree">I Agree</string>
    <string name="github_url">https://github.com/vijaypatidar</string>
    <string name="empty_directory">Directory is empty</string>
    <string name="title_apps">Apps</string>
    <string name="made_in_india">Made with ❤ in India</string>
    <string name="empty_photo">No images found</string>
    <string name="empty_video">No videos found</string>
    <string name="Setting">Settings</string>
    <string name="empty_music">No audio found</string>
    <string name="empty_request">Oops!You have not transfer anything yet.</string>
    <string name="transferring">Transferring</string>
    <string name="history">History</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="photo">Photo</string>
    <string name="external">SD Card</string>
    <string name="internal">Phone</string>
    <string name="download_location">Download location</string>
    <string name="history_cleared_message">History deleted</string>
    <string name="About">About</string>
    <string name="filtering"><![CDATA[Sort&Filter by]]></string>
    <string name="sort_by">SORT BY</string>
    <string name="a_z">A-Z</string>
    <string name="z_a">Z-A</string>
    <string name="latest_first">Latest first</string>
    <string name="oldest_first">Oldest first</string>
    <string name="apply">APPLY</string>
    <string name="size_increasing">Size(increasing)</string>
    <string name="size_decreasing">Size(decreasing)</string>
    <string name="media">Media</string>
    <string name="clear_history">Clear history</string>
    <string name="privacy">Privacy</string>
    <string name="retry">Retry</string>
    <string name="create_group">Create Group</string>
    <string name="alert_dialog_connection_failed_detail">Error occurred while joining group.</string>
    <string name="clear_transferring_history">Clear history</string>
    <string name="clear_transferring_history_detail">"This will not delete the actual file from storage."</string>
    <string name="exit_app_message">Ongoing transferring of files will get cancel.</string>
    <string name="exit_app">Exit app</string>
    <string name="exit">Exit</string>
    <string name="clear">Clear</string>
    <string name="waiting_for_receiver_detail">%S files are in send queue.</string>
    <string name="waiting_for_receiver">Waiting for receiver…</string>
    <string name="ok">OK</string>
    <string name="show_hidden_files">Show hidden files</string>
    <string name="show_hidden_file_detail">No impact on sharing folder.</string>
    <string name="clear_history_detail">This will not delete files from storage.</string>
    <string name="connected_devices">Connected devices</string>
    <string name="scan_connection_code">Scan Connection Code</string>
    <string name="ask">Ask</string>
    <string name="allow">ALLOW</string>
    <string name="waiting_for_connection">waiting for device connection…</string>
    <string name="storage_devices">Storage devices</string>
    <string name="quick_access">Quick access</string>
    <string name="history_is_clear_message">You have not received any file yet or history is cleared.</string>
    <string name="camera_access_denied">camera access denied</string>
    <string name="app_share_message">Hey,I am using SendKr app for sending and receiving files.It can send all types of file and folder.\nDownload app\nhttps://vkp.page.link/SendKr</string>
    <string name="create_new_hotspot">Create new access point</string>
    <string name="use_existing_hotspot">Use existing access point</string>
    <string name="via_router">Via router</string>
    <string name="enable">Enable</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_description">Please enable gps provider to continue creating group.</string>
    <string name="enable_wi_fi">Enable Wi-Fi</string>
    <string name="enable_wifi_description">Wi-Fi is disabled,please enable it to continue.</string>
    <string name="disable_wi_fi">Disable Wi-Fi</string>
    <string name="disable_wifi_description">Please turn off Wi-Fi to continue.</string>
    <string name="turn_off_hotspot">Turn off Hotspot</string>
    <string name="turn_off_hotspot_description">Please turn off Hotspot tethering to continue.</string>
    <string name="turn_off">Turn Off</string>
    <string name="camera_permission_required_description">Camera permission required for scanning QR code.</string>
    <string name="Continue">Continue</string>
    <string name="please_wait">Please wait…</string>
    <string name="scan_amp_connect"><![CDATA[SCAN & CONNECT]]></string>
    <string name="title_feedback">Feedback</string>
    <string name="zip">Zip</string>
    <string name="documents">Documents</string>
    <string name="apk">APK+OBB</string>
    <string name="empty">nothing to show</string>
    <string name="choose">Choose</string>
    <string name="select_directory">Select directory</string>
    <string name="privacy_policy_and_developer">Privacy policy and developer</string>
    <string name="close_group_discription">This will also cancel the ongoing transferring of files.</string>
    <string name="disable">Disable</string>
    <string name="path">Path</string>
    <string name="size">Size</string>
    <string name="type">Type</string>
    <string name="last_modified_on">Last modified on</string>
    <string name="close_leave_group">Close/Leave group</string>
    <string name="failed_to_join_group">Failed to join group</string>
</resources>
