<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/Setting"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share"
        android:title="@string/title_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_feedback"
        android:icon="@drawable/ic_baseline_feedback"
        android:title="@string/title_feedback"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_about"
        android:title="@string/About"
        app:showAsAction="ifRoom" />
</menu>
