<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/round_on_top"
    android:orientation="vertical"
    android:paddingStart="5dp"
    android:paddingTop="10dp"
    android:paddingEnd="5dp"
    android:paddingBottom="10dp">

    <View
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="@drawable/round"
        android:backgroundTint="@color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:text="@string/sort_by"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/sortByNameAToZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/a_z"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/sortByNameZToA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/z_a"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/sortByLatest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/latest_first"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/sortByOldest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/oldest_first"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/sortBySize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/size_increasing"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/sortBySizeDsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/size_decreasing"
            android:textSize="14sp" />
    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="22.5dp"
        app:cardElevation="0dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:clickable="false"
            android:elevation="0dp"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>
</LinearLayout>