<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <me.dm7.barcodescanner.zxing.ZXingScannerView
        android:id="@+id/scanner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/round"
        android:backgroundTint="#1AFC820F"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/scan_connection_code"
        android:textColor="@color/colorAccent" />

    <RelativeLayout
        android:id="@+id/cameraPermissionDenied"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cameraPermissionDeniedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/camera_access_denied"
            android:textAlignment="gravity" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAllow"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/cameraPermissionDeniedText"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round"
            android:backgroundTint="@color/colorAccent"
            android:elevation="0dp"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/allow"
            android:textAlignment="gravity"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>
