<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/top_corner_radius">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/alert_dialog_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="@dimen/top_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/featureImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="10dp"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_clear_history"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="gone"
                tools:text="@string/app_name"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:justificationMode="inter_word"
                android:textSize="14sp"
                android:visibility="gone"
                tools:ignore="UnusedAttribute"
                tools:text="@string/clear_transferring_history_detail"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnNegative"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/round"
                    android:elevation="0dp"
                    android:gravity="center"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textAlignment="gravity"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:visibility="gone"
                    tools:text="@string/cancel"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnPositive"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/round"
                    android:backgroundTint="@color/colorAccent"
                    android:elevation="0dp"
                    android:gravity="center"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textAlignment="gravity"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    tools:text="@string/clear" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>