<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/top_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/camera_permission_required_description"
                android:textAlignment="gravity"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round"
                    android:elevation="0dp"
                    android:gravity="center"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/cancel"
                    android:textAlignment="gravity"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAsk"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round"
                    android:backgroundTint="@color/colorAccent"
                    android:elevation="0dp"
                    android:gravity="center"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/ask"
                    android:textAlignment="gravity"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
